supplementing data before detection

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ output/true_data.zip
 output/stats_detection_script.txt
 output/examples.zip
 output/stats_detection_script.txt
+output/small_data.json
