svm classify embeddings with destilALBERT

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ output/stats_detection_script.txt
 output/examples.zip
 output/stats_detection_script.txt
 output/small_data.json
+output/backup_data.json
