--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ output/stats_embedding_handler.zip
 output/embeddings.zip
 output/rest_to_process_with_gpt3.json
 output/gpt3-remaining-embeddings.csv
+models/*
 tmp1.txt
 tmp2.txt
 tmp.txt
